# memedump-rs

./: Cargo.toml  README.md
public/: index.html  main.js  style.css
public/upload/: index.html  upload.js
src/: api.rs  main.rs  structs.rs
