[package]
name = "memedump-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.0", features = ["full"] }
hyper = { version = "0.14.20", features = ["tcp", "http1", "http2", "server"] }
mime_guess = "2.0.4"
bytes = "1.2.1"
base64 = "0.13.0"
mysql = "22.2.0"
serde = { version = "1.0.143", features = ["serde_derive"] }
serde_json = "1.0.83"
url = "2.2.2"